# debug-poetry2nix

./: pyproject.toml  shell.nix
