[tool.poetry]
name = "debug-poetry2nix"
version = "0.1.0"
description = ""
authors = ["Martijn Bastiaan <martijn@qbaylogic.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fusesoc = "^2.3"
cocotb = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
